--- a/frontend/groupomania/src/app/components/auth/signin/signin.component.html
+++ b/frontend/groupomania/src/app/components/auth/signin/signin.component.html
@@ -1,26 +1,22 @@
 
 <main class="main-wrapper">
     <div class="login">
-      <form class="login--form" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+    <form class="login--form"(ngSubmit)="onSubmit(f)" #f="ngForm">
         <h1>Créer un compte</h1>
         <fieldset>
           <label for="name">Nom</label>
-          <input id="name" type="name" formControlName="name">
+          <input id="name" type="text" class="form-control" name="name" ngModel required>
         </fieldset>
         <fieldset>
           <label for="email">Email</label>
-          <input id="email" type="email" formControlName="email">
+          <input id="email" type="text" class="form-control" name="email" ngModel required>
         </fieldset>
         <fieldset>
           <label for="password">Mot de passe</label>
-          <input id="password" type="password" formControlName="password">
+          <input id="password" type="password" class="form-control" name="password" ngModel required>
         </fieldset>
-        <button class="btn" type="submit" [disabled]="signinForm.invalid" (click)="onSubmit()">Se connecter</button>
+        <button class="btn" type="submit" [disabled]="f.invalid">Se connecter</button>
       </form>
-      <p class="text-danger">{{ errorMsg }}</p>
-      <pre>
-        {{ signinForm.value | json }}
-      </pre>
       <p>Vous avez déjà un compte ? <a routerLink="/signup">Identifiez vous !</a></p>
     </div>
   </main>
